# FuturesTrade

./: .gitignore  README.md
sj-trading/: .env  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
sj-trading/.github/workflows/: deploy.yml
sj-trading/.tmp/: requirements.txt
sj-trading/src/sj_trading/: __init__.py  login.py  main.py  quote.py  testing_flow.py
sj-trading/src/sj_trading/core/: __init__.py  client.py  config.py  notification.py  telegram_bot.py
sj-trading/src/sj_trading/data/: info.py  quote.py
sj-trading/src/sj_trading/strategy/: base.py  ma_crossover.py  stop_loss.py
sj-trading/src/sj_trading/trading/: order.py
sj-trading/src/sj_trading/utils/: dedup.py  gsheet.py
sj-trading/tests/: __init__.py  test_config.py  test_gsheet.py  test_quote.py
