[project]
name = "sj-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars-talib>=0.1.3",
    "polars>=1.9.0",
    "python-dotenv>=1.0.1",
    "shioaji[speed]>=1.2.5",
    "typer>=0.9.0",
    "pandas>=2.0.0",
    "odfpy>=1.4.1",
    "pyarrow>=14.0.0",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
    "requests>=2.31.0",
]

[project.scripts]
sj-trading = "sj_trading.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
